# __COPYRIGHT__
# __FILE__ __REVISION__ __DATE__ __DEVELOPER__


                 SCons - a software construction tool

                            Change Log



RELEASE 0.XX - XXX

  From Benoit Belley:

  - Fix occasional spurious rebuilds and inefficiency when using
    --implicit-cache and Builders that produce multiple targets.

  From David Cournapeau:

  - Add a CheckTypeSize() call to configure contexts.

  From Ken Deeter:

  - Make the "contents" of Alias Nodes a concatenation of the children's
    content signatures (MD5 checksums), not a concatenation of the
    children's contents, to avoid using large amounts of memory during
    signature calculation.

  From Malte Helmert:

  - Fix a lot of typos in the man page and User's Guide.

  From Geoffrey Irving:

  - Speed up conversion of paths in .sconsign files to File or Dir Nodes.

  From Steven Knight:

  - Add an Options.UnknownOption() method that returns any settings
    (from the command line, or whatever dictionary was passed in)
    that aren't known to the Options object.

  - Add a Glob() function.

  - When removing targets with the -c option, use the absolute path (to
    avoid problems interpreting BuildDir() when the top-level directory
    is the source directory).

  - Fix problems with Install() and InstallAs() when called through a
    clone (of a clone, ...) of a cloned construction environment.

  - When executing a file containing Options() settings, add the file's
    directory to sys.path (so modules can be imported from there) and
    explicity set __name__ to the name of the file so the statement's
    in the file can deduce the location if they need to.

  - Fix an O(n^2) performance problem when adding sources to a target
    through calls to a multi Builder (including Aliases).

  - Redefine the $WINDOWSPROGMANIFESTSUFFIX and
    $WINDOWSSHLIBMANIFESTSUFFIX variables so they pick up changes to
    the underlying $SHLIBSUFFIX and $PROGSUFFIX variables.
